# gxf

./: .gitattributes  README.md  build_gxf_release_content.yaml  build_install_gxf_release.sh
com_nvidia_gxf/: .bazelrc  .clang-format  .gitignore  .pylintrc  BUILD  CMakeLists.txt  CMakePresets.json  DEVELOP.md  README.md  WORKSPACE  WORKSPACE.release  pyproject.toml
com_nvidia_gxf/bzl/: BUILD  cuda.bzl  docker.bzl  docker_images.bzl  mkstamp.sh  utils.bzl
com_nvidia_gxf/cmake/: GXFConfig.cmake.in  InstallAndExport.cmake  Superbuild.cmake  UseGXF.cmake  UseGXFInternal.cmake
com_nvidia_gxf/cmake/modules/: Findbreakpad.cmake  Findnvsci.cmake
com_nvidia_gxf/common/: BUILD  BUILD.release  CMakeLists.txt  assert.hpp  backtrace.cpp  expected.hpp  fixed_map.hpp  fixed_string.hpp  fixed_vector.hpp  logger.cpp  logger.hpp  nvtx_helper.hpp  singleton.hpp  type_name.cpp  type_name.hpp  unique_index_map.hpp  yaml_parser.hpp
com_nvidia_gxf/common/tests/: BUILD  CMakeLists.txt  test_endian.cpp  test_expected.cpp  test_fixed_map.cpp  test_fixed_string.cpp  test_fixed_vector.cpp  test_iterator.cpp  test_logger.cpp  test_memory_utils.cpp  test_span.cpp  test_strong_type.cpp  test_type_name.cpp  test_type_utils.cpp  test_unique_index_map.cpp
com_nvidia_gxf/coverity/: BUILD  OWNERS
com_nvidia_gxf/coverity/bazel/: BUILD.bazel  coverity.BUILD  coverity.bzl
com_nvidia_gxf/coverity/config/: BUILD.bazel  coverity_config.xml
com_nvidia_gxf/coverity/ruleset/: BUILD.bazel  autosarcpp14-required-only.config
com_nvidia_gxf/gxf/: BUILD  CMakeLists.txt  OWNERS  __init__.py  gxf.bzl  pybind.bzl  repo.bzl  run.sh.tpl  run_apps.py
com_nvidia_gxf/gxf/app/: BUILD  BUILD.release  CMakeLists.txt  application.cpp  application.hpp  arg.hpp  arg_parse.cpp  arg_parse.hpp  config_parser.cpp  config_parser.hpp  driver.cpp  driver.hpp  entity_group.cpp  entity_group.hpp  extension_manager.cpp  extension_manager.hpp  graph_entity.cpp  graph_entity.hpp  graph_utils.hpp  proxy_component.hpp  segment.cpp  segment.hpp  worker.cpp  worker.hpp
com_nvidia_gxf/gxf/behavior_tree/: BUILD  BUILD.public  BUILD.release  CMakeLists.txt  behavior_tree.cpp  constant_behavior.cpp  constant_behavior.hpp  entity_count_failure_repeat_controller.cpp  entity_count_failure_repeat_controller.hpp  parallel_behavior.cpp  parallel_behavior.hpp  repeat_behavior.cpp  repeat_behavior.hpp  selector_behavior.cpp  selector_behavior.hpp  sequence_behavior.cpp  sequence_behavior.hpp  switch_behavior.cpp  switch_behavior.hpp  timer_behavior.cpp  timer_behavior.hpp
com_nvidia_gxf/gxf/benchmark/: BUILD  CMakeLists.txt  Components.py  __init__.py  allocator_metrics_calculator.cpp  allocator_metrics_calculator.hpp  basic_metrics_calculator.cpp  basic_metrics_calculator.hpp  benchmark.cpp  benchmark_allocator.cpp  benchmark_allocator.hpp  benchmark_allocator_sink.cpp  benchmark_allocator_sink.hpp  benchmark_buffer.py  benchmark_buffer_publisher.py  benchmark_controller.cpp  benchmark_controller.hpp  benchmark_controller.py  benchmark_publisher.cpp  benchmark_publisher.hpp  benchmark_publisher.py  benchmark_sink.cpp  benchmark_sink.hpp  benchmark_sink.py  benchmark_sink_base.hpp  benchmark_utils.py  dummy_message_generator.cpp  dummy_message_generator.hpp  entity_buffer.cpp  entity_buffer.hpp  performance_calculator_base.cpp  performance_calculator_base.hpp  resource_profiler.cpp  resource_profiler.hpp  resource_profiler_base.cpp  resource_profiler_base.hpp
com_nvidia_gxf/gxf/cli/: BUILD  grpc_service_pb2.py  grpc_service_pb2_grpc.py  grpc_transport.py  gxf_cli.py  http_transport.py  renderer.py  service_handler.py  transport.py  version.py
com_nvidia_gxf/gxf/core/: BUILD  BUILD.release  CMakeLists.txt  Gxf.py  README.md  __init__.py  common_expected_macro.hpp  component.hpp  entity.hpp  entity_item.hpp  expected_macro.hpp  filepath.hpp  gxf.cpp  gxf.h  gxf_ext.h  handle.hpp  logger.py  parameter.hpp  parameter_parser.hpp  parameter_parser_std.hpp  parameter_registrar.cpp  parameter_registrar.hpp  parameter_storage.cpp  parameter_storage.hpp  parameter_wrapper.hpp  py_module_builder.py  registrar.hpp  registry.hpp  resource.hpp  resource_manager.cpp  resource_manager.hpp  resource_registrar.hpp  runtime.cpp  runtime.hpp  type_registry.cpp  type_registry.hpp
com_nvidia_gxf/gxf/cuda/: BUILD  BUILD.public  BUILD.release  CMakeLists.txt  Components.py  __init__.py  cuda.cpp  cuda_allocator.cpp  cuda_allocator.hpp  cuda_buffer.hpp  cuda_common.hpp  cuda_event.cpp  cuda_event.hpp  cuda_scheduling_terms.cpp  cuda_scheduling_terms.hpp  cuda_stream.cpp  cuda_stream.hpp  cuda_stream_id.hpp  cuda_stream_pool.cpp  cuda_stream_pool.hpp  cuda_stream_sync.cpp  cuda_stream_sync.hpp  stream_ordered_allocator.cpp  stream_ordered_allocator.hpp
com_nvidia_gxf/gxf/gxe/: BUILD  BUILD.release  CMakeLists.txt  gxe.cpp  manifest.yaml  manifest_extended.yaml
com_nvidia_gxf/gxf/ipc/: CMakeLists.txt
com_nvidia_gxf/gxf/logger/: BUILD  BUILD.release  CMakeLists.txt  gxf_logger.cpp  gxf_logger.hpp  logger.cpp  logger.hpp
com_nvidia_gxf/gxf/messages/: BUILD  BUILD.release  camera_message.cpp  camera_message.hpp
com_nvidia_gxf/gxf/multimedia/: BUILD  BUILD.public  BUILD.release  CMakeLists.txt  Components.py  __init__.py  audio.cpp  camera.hpp  multimedia.cpp  video.cpp  video.hpp
com_nvidia_gxf/gxf/network/: BUILD  BUILD.public  BUILD.release  CMakeLists.txt  Components.py  LICENSE  clock_sync_primary.cpp  clock_sync_primary.hpp  clock_sync_secondary.cpp  clock_sync_secondary.hpp  network.cpp  tcp_client.cpp  tcp_client.hpp  tcp_client_socket.cpp  tcp_client_socket.hpp  tcp_codelet.cpp  tcp_codelet.hpp  tcp_server.cpp  tcp_server.hpp  tcp_server_socket.cpp  tcp_server_socket.hpp
com_nvidia_gxf/gxf/npp/: BUILD  BUILD.public  BUILD.release  CMakeLists.txt  __init__.py  (+6 more)
com_nvidia_gxf/packaging/: BUILD  defs.bzl  packaging.bzl
com_nvidia_gxf/registry/: BUILD  LICENSE  OWNERS  README.md  README.public
com_nvidia_gxf/release/: README  README.md  make_tarball.py  release_build_setup.sh  tarball_content.yaml
com_nvidia_gxf/sample/: BUILD  sample_batch.yaml
(+1135 files in other folders)
